Show alert if database version is newer than app

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -5,3 +5,6 @@
 "AllFilter" = "All";
 "UnreadFilter" = "Unread";
 "LibraryHeader" = "Library";
+
+"DatabaseBrokenErrorMessageText" = "Database is broken.";
+"DatabaseBrokenInformativeText" = "Confirm your app is latest.\nError(\"%@\")";
