--- a/Fomalhaut2/ja.lproj/WebSharingViewController.strings
+++ b/Fomalhaut2/ja.lproj/WebSharingViewController.strings
@@ -1,15 +1,15 @@
-
 /* Class = "NSTextFieldCell"; title = "By enabling the sharing, you can browse your book collections from a web browser on your smartphone or computer."; ObjectID = "9Nx-xa-Kp6"; */
-"9Nx-xa-Kp6.title" = "By enabling the sharing, you can browse your book collections from a web browser on your smartphone or computer.";
-
-/* Class = "NSTextFieldCell"; title = "Web sharing (EXPERIMENTAL)"; ObjectID = "M01-49-yxD"; */
-"M01-49-yxD.title" = "Web sharing (EXPERIMENTAL)";
+"9Nx-xa-Kp6.title" = "共有を開始することで、スマートフォンやパソコンのWebブラウザからあなたのコレクションを閲覧できるようになります。";
 
 /* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "a7S-r1-dAI"; */
-"a7S-r1-dAI.title" = "Cancel";
+"a7S-r1-dAI.title" = "キャンセル";
 
 /* Class = "NSButtonCell"; title = "Start"; ObjectID = "dNE-43-5Ti"; */
-"dNE-43-5Ti.title" = "Start";
+"dNE-43-5Ti.title" = "開始";
 
 /* Class = "NSTextFieldCell"; title = "Enter the port number"; ObjectID = "i0k-ei-doh"; */
-"i0k-ei-doh.title" = "Enter the port number";
+"i0k-ei-doh.title" = "ポート番号";
+
+/* Class = "NSTextFieldCell"; title = "Web sharing (EXPERIMENTAL)"; ObjectID = "M01-49-yxD"; */
+"M01-49-yxD.title" = "Web共有 (実験的機能)";
+
