--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -4,6 +4,7 @@
 
 "AllFilter" = "All";
 "UnreadFilter" = "Unread";
+"LikeFilter" = "Like";
 "LibraryHeader" = "Library";
 "CollectionHeader" = "Collection";
 
