--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -22,3 +22,6 @@
 
 "Like" = "Like";
 "CancelLike" = "Cancel Like";
+
+"ErrorBrokenFile" = "File is corrupt or unsupported file type";
+"ErrorEncrypted" = "File is encrypted";
