Show last access information for web sharing

--- a/Fomalhaut2/ja.lproj/Localizable.strings
+++ b/Fomalhaut2/ja.lproj/Localizable.strings
@@ -57,3 +57,5 @@
 
 "ErrorBrokenFile" = "ファイルが壊れているか未対応です";
 "ErrorEncrypted" = "ファイルが暗号化されています";
+
+"WebSharingIpAddressInformation" = "最終アクセス %@ 日時 %@";
