--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -25,3 +25,5 @@
 
 "ErrorBrokenFile" = "File is corrupt or unsupported file type";
 "ErrorEncrypted" = "File is encrypted";
+
+"WebSharingIpAddressInformation" = "Last Access from %@ at %@"
