Implement QuickLook thumbnail extension
- Fix image alignment of spread page view

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -25,5 +25,6 @@
 
 "ErrorBrokenFile" = "File is corrupt or unsupported file type";
 "ErrorEncrypted" = "File is encrypted";
+"ErrorNoImage" = "There is no image in archive";
 
 "WebSharingIpAddressInformation" = "Last Access from %@ at %@";
