--- a/Fomalhaut2/ja.lproj/Localizable.strings
+++ b/Fomalhaut2/ja.lproj/Localizable.strings
@@ -34,6 +34,8 @@
 /* (No Comment) */
 "ErrorEncrypted" = "ファイルが暗号化されています";
 
+"ErrorNoImage" = "アーカイブに画像が見つかりません";
+
 /* Delete %@ */
 "FilterListMenuDelete" = "%@ を削除";
 
