Store/Restore collection order of book collection view

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -1,6 +1,7 @@
 "SortPopupTitle" = "Sort by";
 "CreatedAtCaption" = "Created";
 "ViewCountCaption" = "View count";
+"NameCaption" = "Name";
 
 "AllFilter" = "All";
 "UnreadFilter" = "Unread";
