--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -29,3 +29,4 @@
 "ErrorNoImage" = "There is no image in archive";
 
 "WebSharingIpAddressInformation" = "Last Access from %@ at %@";
+"NewCollection" = "New Collection";
