--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -30,3 +30,7 @@
 
 "WebSharingIpAddressInformation" = "Last Access from %@ at %@";
 "NewCollection" = "New Collection";
+
+"AlertMessageTextDeleteCollection" = "Do you delete a selected collection?";
+"Cancel" = "Cancel";
+"Delete" = "Delete";
