Add menu item to rename collection name

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -17,6 +17,7 @@
 "CollectionBookMenuDeleteFromCollection" = "Delete from collection";
 "CollectionBookMenuDeleteFromLibrary" = "Delete from library";
 "FilterListMenuDelete" = "Delete %@";
+"FilterListMenuRename" = "Rename";
 
 "Start" = "Start";
 "Stop" = "Stop";
