Add feature "Mark as unread" to context menu

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -24,6 +24,7 @@
 
 "Like" = "Like";
 "CancelLike" = "Cancel Like";
+"MarkUnread" = "Mark as unread";
 
 "ErrorBrokenFile" = "File is corrupt or unsupported file type";
 "ErrorEncrypted" = "File is encrypted";
