Add feature to duplicate a collection

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -18,6 +18,7 @@
 "CollectionBookMenuDeleteFromLibrary" = "Delete from library";
 "FilterListMenuDelete" = "Delete %@";
 "FilterListMenuRename" = "Rename";
+"FilterListMenuDuplicate" = "Duplicate";
 
 "Start" = "Start";
 "Stop" = "Stop";
