Add context menu to add new collection

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "FilterListMenuDelete" = "Delete %@";
 "FilterListMenuRename" = "Rename";
 "FilterListMenuDuplicate" = "Duplicate";
+"FilterListMenuAdd" = "Add a new Collection";
 
 "Start" = "Start";
 "Stop" = "Stop";
