Show an alert when open deleted file or show in Finder

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -31,6 +31,8 @@
 "ErrorBrokenFile" = "File is corrupt or unsupported file type";
 "ErrorEncrypted" = "File is encrypted";
 "ErrorNoImage" = "There is no image in archive";
+"ErrorUnresolvedBookmarkData" = "This book might be deleted.";
+"ErrorFileDoesNotExists" = "This file does not exists.";
 
 "WebSharingIpAddressInformation" = "Last Access from %@ at %@";
 "WebSharingTimeout" = "Stopped web sharing because there was no access for a while.";
