Fix to be able to close web sharing sheet

--- a/Fomalhaut2/Base.lproj/Localizable.strings
+++ b/Fomalhaut2/Base.lproj/Localizable.strings
@@ -41,3 +41,6 @@
 "AlertMessageTextDeleteCollection" = "Do you delete a selected collection?";
 "Cancel" = "Cancel";
 "Delete" = "Delete";
+
+"WebSharingStart" = "Start WebSharing…";
+"WebSharingStop" = "Stop WebSharing";
