--- a/Fomalhaut2/ja.lproj/Preferences.strings
+++ b/Fomalhaut2/ja.lproj/Preferences.strings
@@ -1,3 +1,6 @@
+/* Class = "NSTextFieldCell"; title = "Keep First Window Size"; ObjectID = "9AO-Av-hky"; */
+"9AO-Av-hky.title" = "最初のウィンドウサイズを保持";
+
 /* Class = "NSMenuItem"; title = "Left to Right"; ObjectID = "awn-vZ-H6d"; */
 "awn-vZ-H6d.title" = "左側が先";
 
